--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -66,6 +66,15 @@
     <a class="aref" href="mailto:contact@growhopes.in"> contact@growhopes.in</a>
     <br />
   </div>
+  <section fxLayout="column" fxLayoutAlign="center center">
+    <h2>Social</h2>
+    <section fxLayoutGap="30px">
+      <img src="assets/Images/footer/gmail.png" class="icon" >
+    <img src="assets/Images/footer/linkedin.png" class="icon" >
+    <img src="assets/Images/footer/instagram.png" class="icon" >
+    </section>
+  </section>
+  <br>
 </div>
 
 <div fxHide.gt-md>
@@ -136,4 +145,12 @@
     <a class="aref" href="mailto:contact@growhopes.in"> contact@growhopes.in</a>
     <br />
   </div>
+  <section fxLayout="column" fxLayoutAlign="center center">
+    <h2>Social</h2>
+    <section fxLayoutGap="30px">
+      <img src="assets/Images/footer/gmail.png" class="icon" >
+    <img src="assets/Images/footer/linkedin.png" class="icon" >
+    <img src="assets/Images/footer/instagram.png" class="icon" >
+    </section>
+  </section>
 </div>
