--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<div fxLayout="column" fxLayoutAlign="center center"  style="background-color:black;">
+  <br> <br>
+  <h1 >GROW-HOPES</h1>
+  <section style="font-size: large;font-weight: 400; color: white; text-align: center;">
+    Grow hopes D-88 shanti nagar Khatipura road Jaipur, RJ 302006 IN
+  </section>
+  <br>
+  <section>
+   <a href="tel:+9107014382302"> 070143 82302</a>
+  </section>
+
+  <br>
+  <section style="color: thistle;">
+    Copyright © 2020 Grow opes - All Rights Reserved.
+  </section>
+
+  <br>
+  <br>
+</div>
