--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -290,9 +290,18 @@
     <app-ourservices></app-ourservices>
   </div>
   <div class="bg1"></div>
-
   <div #contact>
+    &nbsp;
+  </div>
+  <div>
+    &nbsp;
+  </div>
+  <div >
     <app-contactus></app-contactus>
+  </div>
+
+  <div>
+    <app-footer></app-footer>
   </div>
 </div>
 <!-- Mobile view -->
@@ -568,4 +577,5 @@
   <div #contact>
     <app-contactus></app-contactus>
   </div>
+  <app-footer></app-footer>
 </div>
