--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,7 +116,7 @@
   </div>
 </div>
 
-<div fxLayout.gt-md>
+<div fxHide.gt-md>
   <mat-toolbar >
     <div fxHide.gt-md>
       <button style="color: white;" mat-icon-button (click)="onToggleSidenav()">
