--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,13 @@
 
+.bg1 {
+  background-image: url("/assets/Images/home/bg1.jpg");
+  min-height: 400px;
+  min-width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .bg2 {
   background-image: url("/assets/Images/home/bg2.jpg");
   min-height: 400px;
