--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,8 @@
 
   <div class="bg1"></div>
   <br />
-  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" class="team">
+    <br>
     <div
       style="
         text-align: center;
@@ -231,7 +232,7 @@
   </div>
   <br />
   <br />
-  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="50px">
+  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="50px" >
     <div
       style="
         text-align: center;
@@ -257,7 +258,8 @@
   </div>
   <div class="bg1"></div>
   <br />
-  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center">
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" class="team">
+    <br>
     <div
       style="
         text-align: center;
