--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -69,9 +69,9 @@
   <section fxLayout="column" fxLayoutAlign="center center">
     <h2>Social</h2>
     <section fxLayoutGap="30px">
-      <img src="assets/Images/footer/gmail.png" class="icon" >
-    <img src="assets/Images/footer/linkedin.png" class="icon" >
-    <img src="assets/Images/footer/instagram.png" class="icon" >
+     <a href="mailto:contact@growhopes.in"> <img src="assets/Images/footer/gmail.png" class="icon" ></a>
+    <a href="https://www.linkedin.com/company/grow-hopes"> <img src="assets/Images/footer/linkedin.png" class="icon" ></a>
+    <a href="https://instagram.com/grow_hopes?igshid=1l08d89in39v6"> <img src="assets/Images/footer/instagram.png" class="icon" ></a>
     </section>
   </section>
   <br>
@@ -148,9 +148,9 @@
   <section fxLayout="column" fxLayoutAlign="center center">
     <h2>Social</h2>
     <section fxLayoutGap="30px">
-      <img src="assets/Images/footer/gmail.png" class="icon" >
-    <img src="assets/Images/footer/linkedin.png" class="icon" >
-    <img src="assets/Images/footer/instagram.png" class="icon" >
+     <a href="mailto:contact@growhopes.in"> <img src="assets/Images/footer/gmail.png" class="icon" ></a>
+    <a href="https://www.linkedin.com/company/grow-hopes"> <img src="assets/Images/footer/linkedin.png" class="icon" ></a>
+    <a href="https://instagram.com/grow_hopes?igshid=1l08d89in39v6"> <img src="assets/Images/footer/instagram.png" class="icon" ></a>
     </section>
   </section>
 </div>
