--- a/src/app/ourservices/ourservices.component.html
+++ b/src/app/ourservices/ourservices.component.html
@@ -13,7 +13,7 @@
 
       <img
         src="assets/Images/Services/Job Consultancy.jpg"
-        style="width: 400px; height: 270px;"
+        style="width: 400px; height: 270px; border-radius: 2%;"
       />
       <mat-card-content>
 
@@ -27,7 +27,7 @@
 
       <img
         src="assets/Images/Services/Counselling.jpg"
-        style="width: 400px; height: 270px;"
+        style="width: 400px; height: 270px; border-radius: 2%;"
       />
     </mat-card>
     <mat-card class="matdesk">
@@ -40,7 +40,7 @@
 
       <img
         src="assets/Images/Services/Social Media Handling.jpg"
-        style="width: 400px; height: 270px;"
+        style="width: 400px; height: 270px; border-radius: 2%;"
       />
     </mat-card>
   </div>
@@ -61,7 +61,7 @@
       >
       <img
         src="assets/Images/Services/Job Consultancy.jpg"
-        style="width: 300px; height: 220px;"
+        style="width: 300px; height: 220px; border-radius: 2%;"
       />
       <mat-card-content>
 
@@ -73,7 +73,7 @@
       >
       <img
         src="assets/Images/Services/Counselling.jpg"
-        style="width: 300px; height: 220px;"
+        style="width: 300px; height: 220px; border-radius: 2%;"
       />
     </mat-card>
     <mat-card class="matmob">
@@ -82,7 +82,7 @@
       >
       <img
       src="assets/Images/Services/Social Media Handling.jpg"
-      style="width: 300px; height: 220px;"
+      style="width: 300px; height: 220px; border-radius: 2%;"
     />
     </mat-card>
   </div>
