--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,4 +1,4 @@
-<div fxHide.lt-md>
+<div fxHide.lt-md style="background-color: rgb(212, 209, 209);">
   <br />
   <div fxLayout="column" fxLayoutAlign="center center">
     <br>
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-<div fxHide.gt-md>
+<div fxHide.gt-md style="background-color: rgb(212, 209, 209);">
   <br />
   <div fxLayout="column" fxLayoutAlign="center center" >
     <br>
