--- a/src/app/aboutus/aboutus.component.scss
+++ b/src/app/aboutus/aboutus.component.scss
@@ -2,11 +2,13 @@
   font-size: 70px;
   line-height: 40px;
   font-family: cursive;
+  // color: black;
   color: royalblue;
 }
 .mobheading{
   font-size: 35px;
   line-height: 35px;
   font-family: cursive;
+  // color: black;
   color: royalblue;
 }
