--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,4 +1,4 @@
-<div fxHide.lt-md>
+<div fxHide.lt-md style="background-color: rgb(204, 233, 215);">
   <h1 class="h1class">Contact Us</h1>
   <br />
   <br />
@@ -77,7 +77,7 @@
   <br>
 </div>
 
-<div fxHide.gt-md>
+<div fxHide.gt-md  style="background-color: burlywood;">
   <h1 class="h1mob">Contact Us</h1>
   <br />
   <br />
@@ -121,7 +121,7 @@
   </div>
   <br />
   <br />
-  <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center">
+  <div fxLayout="column" fxLayoutGap="30px" fxLayoutAlign="center center" >
     <h1
       style="
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
