--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,9 @@
   </div>
   <br />
   <br />
-  <div fxLayout fxLayoutGap="80px" fxLayoutAlign="center">
+ <div style="background-color: rgb(206, 233, 250);padding-top: 20px;">
+  <div fxLayout fxLayoutGap="80px" fxLayoutAlign="center" >
+    <br>
     <section style="width: 500px; text-align: center;">
       <img
         src="assets/Images/home/mission.jpg"
@@ -38,14 +40,14 @@
   <br />
   <br />
   <br />
-  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="50px">
+  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="50px" >
     <div
       style="
         text-align: center;
         font-size: 50px;
         line-height: 45px;
         font-family: cursive;
-        color: royalblue;
+        color: black;
       "
     >
       Clients we Work For:
@@ -62,10 +64,11 @@
     </div>
     <br />
   </div>
+ </div>
 
   <div class="bg1"></div>
   <br />
-  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" class="team">
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" style="background-color:rgb(166, 243, 235);">
     <br>
     <div
       style="
@@ -73,7 +76,7 @@
         font-size: 60px;
         line-height: 50px;
         font-family: cursive;
-        color: royalblue;
+        color: black;
       "
     >
       Meet Our Team
@@ -201,8 +204,10 @@
     <div class="mobcenter">
       <p style="font-size: 24px;">Grow Hopes</p>
     </div>
+
   </div>
-  <br />
+  <div style="background-color: rgb(206, 233, 250);padding-top: 20px;">
+    <br />
   <br />
   <div fxLayout="column" fxLayoutGap="80px" fxLayoutAlign="center center">
     <section style="width: 300px; text-align: center;">
@@ -239,7 +244,7 @@
         font-size: 35px;
         line-height: 40px;
         font-family: cursive;
-        color: royalblue;
+        color: BLACK;
       "
     >
       Clients we Work For:
@@ -256,9 +261,10 @@
     </div>
     <br />
   </div>
+  </div>
   <div class="bg1"></div>
   <br />
-  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" class="team">
+  <div fxLayout="column" fxLayoutGap="50px" fxLayoutAlign="center center" style="background-color: rgb(195, 248, 243);">
     <br>
     <div
       style="
@@ -266,7 +272,7 @@
         font-size: 45px;
         line-height: 35px;
         font-family: cursive;
-        color: royalblue;
+        color: black;
       "
     >
       Meet Our Team
