--- a/src/app/ourservices/ourservices.component.html
+++ b/src/app/ourservices/ourservices.component.html
@@ -1,4 +1,4 @@
-<div fxHide.lt-md>
+<div fxHide.lt-md style="background-color: blanchedalmond;">
   <h1>Our services</h1>
   <br />
   <br />
@@ -50,7 +50,7 @@
 
 <!-- Mobile View -->
 
-<div fxHide.gt-md>
+<div fxHide.gt-md style="background-color: blanchedalmond;">
   <h1>Our services</h1>
   <br />
   <br />
