--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
             >Home
           </a>
         </li>
-        <li style="color: white;">|</li>
+        <li style="color: white;font-size:26px">|</li>
 
         <li>
           <a
@@ -45,7 +45,7 @@
             >About Us</a
           >
         </li>
-        <li style="color: white;">|</li>
+        <li style="color: white;font-size:26px">|</li>
         <li>
           <a
             style="
@@ -59,7 +59,7 @@
           >
         </li>
 
-        <li style="color: white;">|</li>
+        <li style="color: white;font-size:26px">|</li>
         <li>
           <a
             style="
