--- a/src/app/ourservices/ourservices.component.scss
+++ b/src/app/ourservices/ourservices.component.scss
@@ -1,7 +1,7 @@
 h1{
   font-size: 45px;
   font-family: cursive;
-  color: royalblue;
+  color: black;
   padding-top: 35px;
   text-align: center;
 }
