--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -77,7 +77,7 @@
   <br>
 </div>
 
-<div fxHide.gt-md  style="background-color: burlywood;">
+<div fxHide.gt-md  style="background-color: rgb(204, 233, 215);;">
   <h1 class="h1mob">Contact Us</h1>
   <br />
   <br />
