--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -128,83 +128,7 @@
       <app-sidenav (closesidenav)="sidenav.close()"></app-sidenav>
     </mat-sidenav>
     <mat-sidenav-content>
-     <div (sidenavToggle)="sidenav.toggle()">
-      <mat-toolbar >
-        <div fxHide.gt-md>
-          <button style="color: white;" mat-icon-button (click)="onToggleSidenav()" >
-            <mat-icon>menu</mat-icon> &nbsp;
-          </button>
-
-        </div>
-        <div>
-          <a
-            style="
-              font-size: x-large;
-              font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            "
-            routerLink="/home"
-            (click)="scroll(home)"
-          >
-            Grow Hopes</a
-          >
-        </div>
-        <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.lt-md>
-          <ul fxLayout class="navbar" fxLayoutGap="20px">
-            <li>
-              <a
-                style="
-                  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
-                    serif;
-                  font-size: large;
-                "
-                routerLink="/home"
-                (click)="scroll(home)"
-                >Home
-              </a>
-            </li>
-            <li style="color: white;">|</li>
-            <li>
-              <a
-                style="
-                  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
-                    serif;
-                  font-size: large;
-                "
-                routerLink="/ourservcices"
-                (click)="scroll(ourservices)"
-                >Our Services</a
-              >
-            </li>
-            <li style="color: white;">|</li>
-            <li>
-              <a
-                style="
-                  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
-                    serif;
-                  font-size: large;
-                "
-                routerLink="/aboutus"
-                (click)="scroll(about)"
-                >About Us</a
-              >
-            </li>
-            <li style="color: white;">|</li>
-            <li>
-              <a
-                style="
-                  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
-                    serif;
-                  font-size: large;
-                "
-                routerLink="/contactus"
-                (click)="scroll(contact)"
-                >Contact Us</a
-              >
-            </li>
-          </ul>
-        </div>
-      </mat-toolbar>
-     </div>
+      <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
       <main>
         <br> <br> <br> <div #home>
           <app-home></app-home>
