--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -153,7 +153,7 @@
         <mat-card>
           <mat-card-title>Shivansh Arora</mat-card-title>
           <mat-card-subtitle>Strategic Consultant</mat-card-subtitle>
-          <img class="person" src="/assets/Images/home/mission.jpg" /><br />
+          <img class="person" src="/assets/Images/team/shivansh.jpeg" /><br />
           <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
             <section>
               <a href="mailto: simplyshivansh10@gmail.com "
@@ -349,7 +349,7 @@
       <mat-card class="matmob">
         <mat-card-title>Shivansh Arora</mat-card-title>
         <mat-card-subtitle>Strategic Consultant</mat-card-subtitle>
-        <img class="personmob" src="/assets/Images/home/mission.jpg" /><br />
+        <img class="personmob" src="/assets/Images/team/shivansh.jpeg" /><br />
         <div fxLayout fxLayoutAlign="center center" fxLayoutGap="50px">
           <section>
             <a href="mailto: simplyshivansh10@gmail.com "
