--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -1,23 +1,23 @@
 <mat-nav-list role="list">
   <mat-list-item role="listitem"
-    ><a routerLink="/home" (click)="sidenavclose()">
+    ><a routerLink="/home" (click)="onclose()">
       <mat-icon>home</mat-icon>
       <span class="nav-caption">Home</span>
     </a></mat-list-item
   >
   <mat-list-item role="listitem"
-    ><a routerLink="/aboutus" (click)="sidenavclose()"
+    ><a routerLink="/aboutus" (click)="onclose()"
       ><mat-icon>face</mat-icon> <span class="nav-caption">About Us</span></a
     ></mat-list-item
   >
   <mat-list-item role="listitem"
-    ><a routerLink="/projects" (click)="sidenavclose()"
+    ><a routerLink="/projects" (click)="onclose()"
       ><mat-icon>construction</mat-icon>
       <span class="nav-caption">Services</span></a
     ></mat-list-item
   >
   <mat-list-item role="listitem"
-    ><a routerLink="/contactus" (click)="sidenavclose()"
+    ><a routerLink="/contactus" (click)="onclose()"
       ><mat-icon>account_box</mat-icon>
       <span class="nav-caption">Contact Us</span></a
     ></mat-list-item
