--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,7 +123,7 @@
 
 <div fxHide.gt-md>
 
-  <mat-sidenav-container>
+<mat-sidenav-container>
     <mat-sidenav #sidenav role="navigation">
       <app-sidenav (closesidenav)="sidenav.close()"></app-sidenav>
     </mat-sidenav>
@@ -171,5 +171,16 @@
       </main>
     </mat-sidenav-content>
   </mat-sidenav-container>
-
+  <!-- <mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation">
+      <app-sidenav (closesidenav)="sidenav.close()"></app-sidenav>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+      <main>
+        <router-outlet></router-outlet>
+        <app-footer></app-footer>
+      </main>
+    </mat-sidenav-content>
+  </mat-sidenav-container> -->
 </div>
