--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,7 @@
         text-align: center;
         font-size: 50px;
         line-height: 45px;
-        font-family: cursive;
+        font-weight: 500;
         color: black;
       "
     >
@@ -243,7 +243,8 @@
         text-align: center;
         font-size: 35px;
         line-height: 40px;
-        font-family: cursive;
+        font-weight: 500;
+
         color: BLACK;
       "
     >
