--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="onToggleSidenav()">
       <mat-icon>menu</mat-icon>
     </button>
-  </div>
+  </div>&nbsp;&nbsp;
   <div>
     <a
       style="
