--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .container {
   position: relative;
-  text-align: center;
+  margin-top: 50px;
+  text-align: right;
   font-size: 60px;
   font-weight: bolder;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -8,17 +9,15 @@
 }
 .mobcontainer {
   position: relative;
-  text-align: center;
+  text-align: right;
   font-weight: bolder;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  font-size: 26px;
+  margin-top: 200px;
   font-family: Arial, Helvetica, sans-serif;
-  transform: translate(-50%, -50%);
   color: black;
   line-height: 40px;
 }
