--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,11 +83,11 @@
   <div>
     <app-home></app-home>
   </div>
-  <div class="bg2"></div>
-  <div #about>
+  <div  class="bg2"></div>
+  <div  style="background-color: rgb(212, 209, 209);"#about>
     &nbsp;
   </div>
-  <div>
+  <div style="background-color: rgb(212, 209, 209);">
     &nbsp;
   </div>
   <div>
@@ -95,20 +95,20 @@
   </div>
 
   <div class="bg3"></div>
-  <div #ourservices>
+  <div style="background-color: blanchedalmond;" #ourservices>
     &nbsp;
   </div>
-  <div>
+  <div style="background-color: blanchedalmond;">
     &nbsp;
   </div>
   <div>
     <app-ourservices></app-ourservices>
   </div>
   <div class="bg1"></div>
-  <div #contact>
+  <div style="background-color: rgb(204, 233, 215);" #contact>
     &nbsp;
   </div>
-  <div>
+  <div style="background-color: rgb(204, 233, 215);">
     &nbsp;
   </div>
   <div>
