--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -215,7 +215,7 @@
   <div #home class="mobcontainer">
     <img class="mobimg" src="\assets\Images\home\logo.png" />
     <div class="mobcenter">
-      <p style="font-size: 24px;">Grow Hopes</p>
+      <p style="font-size: 32px;font-weight: 500;">Grow Hopes</p>
     </div>
   </div>
   <div style="background-color: rgb(206, 233, 250); padding-top: 20px;">
