--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -59,7 +59,7 @@
         font-weight: 350;
       "
     >
-      D-88, Shanti nagar, Khatipura road, Civil lines,302006
+    D-88, Shanti nagar,Near NBC, Khatipura road, Jaipur, RJ 302006
     </p>
     <br />
 
@@ -138,7 +138,7 @@
         font-weight: 350;
       "
     >
-      D-88, Shanti nagar, Khatipura road, Civil lines,302006
+      D-88, Shanti nagar,Near NBC, Khatipura road, Jaipur, RJ 302006
     </p>
     <br />
 
