--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <br> <br>
   <h1 >GROW-HOPES</h1>
   <section style="font-size: large;font-weight: 400; color: white; text-align: center;">
-    Grow hopes D-88 shanti nagar Khatipura road Jaipur, RJ 302006 IN
+    Grow hopes D-88 shanti nagar, Near NBC &nbsp; Khatipura road Jaipur, RJ 302006 IN
   </section>
   <br>
   <section>
