--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,10 +22,12 @@
   line-height: 40px;
 }
 .mobcenter {
-  position: absolute;
-  top: 50%;
-  left: 46%;
-  transform: translate(-50%, -50%);
+  // position: absolute;
+  // top: 50%;
+  // left: 46%;
+  margin-top: 15px;
+  text-align: center;
+  // transform: translate(-50%, -50%);
   color: black;
   line-height: 20px;
 }
@@ -37,7 +39,7 @@
 .mobimg {
   width: 100%;
   height: 300px;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 .person {
   width: 350px;
